--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
    </head>
    <body>
       <div id="header">
-         <h1 style="margin: 100px;"><b>Infared Proxy</b></h1>
+         <h1 style="margin: 100px;"><b>Venus Proxy</b></h1>
       </div>
       <div id="content">
          <h1>Search the Web <i>without restrictions</i></h1>
