--- a/static/search.html
+++ b/static/search.html
@@ -1,1 +1,13 @@
-<embed  height="100%" width="100%" src="index.html"></embed>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Venus Proxy</title>
+  </head>
+  <body>
+    <div style="position: center;">
+    <center>
+    <input style="border-radius: 7px; border-style: none; color: white; background-color: black; width: 500px; height: 40px; font-size: 13px;" placeholder="Type in URL or Seatch Google"/><button style="border-style: none; color: white; background-color: black; width: 150px; height: 40px; border-radius: 7px;">Go</button>
+    </div>
+    </center>
+  </body>
+</html>
