--- a/Games.html
+++ b/Games.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games Tab</title>
     <style>
-        /* styles.css */
+        /* General styles */
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
         }
 
+        /* Tab container style */
         .tab {
             overflow: hidden;
             border: 1px solid #ccc;
             background-color: #f1f1f1;
         }
 
+        /* Style for tab buttons (Games icon) */
         .tab button {
             background-color: inherit;
             float: left;
@@ -23,48 +27,82 @@
             outline: none;
             cursor: pointer;
             padding: 14px 16px;
+            font-size: 18px;
             transition: 0.3s;
         }
 
+        /* Hover effect on the button */
         .tab button:hover {
             background-color: #ddd;
         }
 
+        /* Active tab button style */
         .tab button.active {
             background-color: #ccc;
         }
 
+        /* Content that is hidden by default */
         .tabcontent {
             display: none;
-            padding: 6px 12px;
+            padding: 20px;
             border: 1px solid #ccc;
             border-top: none;
+        }
+
+        /* Icon styles */
+        .icon {
+            font-size: 24px;
+            margin-right: 8px;
+        }
+
+        /* Custom tab content styling */
+        .games-content {
+            padding: 20px;
+            background-color: #f9f9f9;
         }
     </style>
 </head>
 <body>
     <div class="tab">
-        <button class="tablinks" onclick="openTab(event, 'Games')">Games</button>
+        <!-- Game tab button with an icon -->
+        <button class="tablinks" onclick="openTab(event, 'Games')">
+            <span class="icon">&#127918;</span> Games
+        </button>
     </div>
 
     <div id="Games" class="tabcontent">
         <h3>Games</h3>
-        <p>Here you can add your games content.</p>
+        <div class="games-content">
+            <p>Welcome to the Games section! Here you can find a variety of games to play.</p>
+            <ul>
+                <li>Game 1: Puzzle Challenge</li>
+                <li>Game 2: Adventure Quest</li>
+                <li>Game 3: Racing Mania</li>
+            </ul>
+        </div>
     </div>
 
     <script>
-        // script.js
+        // JavaScript function to open a tab and display the content
         function openTab(evt, tabName) {
             var i, tabcontent, tablinks;
+
+            // Hide all tabs by default
             tabcontent = document.getElementsByClassName("tabcontent");
             for (i = 0; i < tabcontent.length; i++) {
                 tabcontent[i].style.display = "none";
             }
+
+            // Remove the active class from all buttons
             tablinks = document.getElementsByClassName("tablinks");
             for (i = 0; i < tablinks.length; i++) {
                 tablinks[i].className = tablinks[i].className.replace(" active", "");
             }
+
+            // Show the clicked tab's content
             document.getElementById(tabName).style.display = "block";
+
+            // Add active class to the clicked button
             evt.currentTarget.className += " active";
         }
     </script>
