--- a/Games.html
+++ b/Games.html
@@ -58,7 +58,7 @@
         /* Custom tab content styling */
         .games-content {
             padding: 20px;
-            background-color: #f9f9f9;
+            background-color: #808080;
         }
     </style>
 </head>
